Tweak new button positions for better distinction.

--- a/src/views/Appeal/Appeal.styl
+++ b/src/views/Appeal/Appeal.styl
@@ -56,9 +56,19 @@
             height: 10rem;
         }
 
+        .hidden-checkbox {
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
+
         .submit-and-hidden {
             display: flex;
             justify-content: space-between;
+            gap: 1rem;
+
+            button:only-child {
+                margin: 0;
+            }
         }
     }
 }
