Show simul warning in a more appropriate place

--- a/src/views/ReportsCenter/ReportedGame.styl
+++ b/src/views/ReportsCenter/ReportedGame.styl
@@ -79,6 +79,14 @@
         text-align: center;
     }
 
+    .simul-warning {
+        themed: color danger;
+        font-weight: bold;
+        font-size: 1.2rem;
+        text-align: center;
+        margin-bottom: 0.5rem;
+    }
+
     // We have horizontal less room than `GameLog` expects
     .GameLog {
         tr {
