Keyboard input for making moves

--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -653,3 +653,9 @@ ol, ul {
         padding: 0;
     }
 }
+
+input.reject {
+    themed-important: border-color reject;
+    background-color: #88000088 !important;
+    themed-important: color fg-increased-contrast;
+}
