Upgrade JosekiAdmin from react-table v6 to TanStack Table v8
- Rewrite JosekiAdmin component from class to functional component
- Maintain all existing functionality: pagination, filtering, row selection, reversion
- Fixes Rolldown CommonJS interop issues with react-table v6

--- a/src/components/JosekiAdmin/JosekiAdmin.styl
+++ b/src/components/JosekiAdmin/JosekiAdmin.styl
@@ -59,7 +59,7 @@
         text-decoration: underline;
     }
 
-    .ReactTable, .ReactTable * {
+    .react-table, .react-table * {
         themed: border-color shade5 !important;
     }
 
