Initial fair play system
Contains stubs and a tag input system for the fair play system

--- a/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
+++ b/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
@@ -21,6 +21,10 @@
         text-align: left;
     }
 
+    input::placeholder {
+        themed: color shade0;
+    }
+
     input:disabled {
         cursor: not-allowed;
     }
