Add a display of the "simul status" of a game, for AID to see.

--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -44,6 +44,14 @@
     .autofocus-submit-button:active::after {
         content: none;
     }
+
+    .simul-warning {
+        themed: color danger;
+        font-weight: bold;
+        font-size: 1.2rem;
+        text-align: center;
+        margin-bottom: 0.5rem;
+    }
 }
 
 .condensed-game-information {
