--- a/src/views/Game/GameTimings.styl
+++ b/src/views/Game/GameTimings.styl
@@ -48,6 +48,13 @@
         grid-column: span 4;
     }
 
+    .simul-warning {
+        themed: color danger;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 0.5rem;
+    }
+
     .final-action-row {
         grid-row: 2; // final action time at the top for easy viewing in escape cases
         padding-bottom: 0.2rem;
