Adjust Player username margin in ProfileCard styles

--- a/src/components/ProfileCard/ProfileCard.styl
+++ b/src/components/ProfileCard/ProfileCard.styl
@@ -28,6 +28,10 @@
         flex-direction: column;
         padding-left: 1rem;
         justify-content: space-between;
+
+        .Player .Player-username {
+            margin: 0;
+        }
     }
 
     .PlayerIcon {
