font awesome not emoticons

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -156,13 +156,15 @@ reports_center_content_width = 56rem;
 
         .oldest-age {
             &::before {
-                content: "🤔"; 
+                font-family: FontAwesome;
+                content: "\f11a";
             }
         }
 
         .cull-count {
             &::before {
-                content: "💀";  
+                font-family: FontAwesome;
+                content: "\f014";
             }
         }
     }
