--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -157,7 +157,8 @@ reports_center_content_width = 56rem;
         .oldest-age {
             &::before {
                 font-family: FontAwesome;
-                content: "\f11a";
+                content: "\f252";
+                margin-right: 0.1rem;
             }
         }
 
@@ -165,6 +166,7 @@ reports_center_content_width = 56rem;
             &::before {
                 font-family: FontAwesome;
                 content: "\f014";
+                margin-right: 0.1rem;
             }
         }
     }
