Show open report counts by category.

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -154,6 +154,15 @@ reports_center_content_width = 56rem;
             opacity: 0.7;
         }
 
+        .open-count {
+            padding-left: 0.25rem;
+            &::before {
+                font-family: FontAwesome;
+                content: "\f07c";
+                margin-right: 0.1rem;
+            }
+        }
+
         .oldest-age {
             &::before {
                 font-family: FontAwesome;
