Add missing stylus defs

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -141,6 +141,7 @@ light.background-color                  = light.bg
 light.card-background-color             = darken(light.bg, 3%)
 light.text-color                        = light.fg
 light.text-color-active                 = darken(light.text-color, 50%)
+light.text-dimmed                       = lighten(light.fg, 40%)
 light.spectator-text-color              = #0A06A8
 light.default-button-color              = light.fg
 light.toast-bg                          = light.fg
@@ -300,6 +301,7 @@ dark.mix-base                           = #777
 dark.background-color                   = dark.bg
 dark.card-background-color              = lighten(dark.bg, 7%)
 dark.text-color                         = dark.fg
+dark.text-dimmed                        = darken(dark.fg, 25%)
 dark.spectator-text-color               = #8987FC
 dark.text-color-active                  = lighten(dark.text-color, 50%)
 dark.toast-bg                           = dark.fg
