Refactor full ai review button out to a component; restore presence of button on page when viewing a fast review

--- a/src/components/AIReview/AIReview.styl
+++ b/src/components/AIReview/AIReview.styl
@@ -38,6 +38,16 @@
         }
     }
 
+    .full-review-button-container {
+        text-align: center;
+        margin: 1rem 0.5rem;
+        user-select: none;
+
+        button.primary {
+            margin-bottom: 0.5rem;
+        }
+    }
+
     .full-ai-review {
         margin-left: 1rem;
     }
