--- a/src/components/AccountWarning/AccountWarning.css
+++ b/src/components/AccountWarning/AccountWarning.css
@@ -44,7 +44,7 @@
     z-index: var(--z-account-warning);
     background-color: var(--account-warning-bg);
     color: var(--account-warning-fg);
-    border-color: var(--account-warning-bg); /* TODO: themed-lighten account-warning-bg 20% */
+    border-color: color-mix(in srgb, var(--account-warning-bg), white 20%);
     border: 1px solid;
     border-radius: 0.5rem;
     padding: 1rem;
@@ -113,7 +113,7 @@
     z-index: var(--z-account-warning);
     background-color: var(--account-warning-bg);
     color: var(--account-warning-fg);
-    border-color: var(--account-warning-bg); /* TODO: themed-lighten account-warning-bg 20% */
+    border-color: color-mix(in srgb, var(--account-warning-bg), white 20%);
     border: 1px solid;
     border-radius: 0.5rem;
     padding: 1rem;
