--- a/src/components/Chat/ChatChannelList.css
+++ b/src/components/Chat/ChatChannelList.css
@@ -19,6 +19,7 @@
         padding-left: 0.2rem;
         display: flex;
         justify-content: space-between;
+        transition: background-color 0.2s ease, color 0.2s ease;
 
         &.active {
             background-color: var(--primary);
@@ -26,7 +27,7 @@
         }
 
         &:hover {
-            background-color: var(--primary); /* TODO: themed-desaturate primary 80% */
+            background-color: color-mix(in srgb, var(--primary), var(--shade2) 50%);
             color: var(--colored-background-fg);
         }
 
