--- a/src/components/Steps/Steps.css
+++ b/src/components/Steps/Steps.css
@@ -92,8 +92,8 @@
 .SelectedStepContainer {
     .title-row {
         .title-text {
-            border-color: var(--primary); /* TODO: themed-darken primary 30% */
-            background-color: var(--primary); /* TODO: themed-lighten primary 30% */
+            border-color: color-mix(in srgb, var(--primary), black 30%);
+            background-color: color-mix(in srgb, var(--primary), white 30%);
         }
     }
 }
