--- a/src/views/Play/QuickMatch.css
+++ b/src/views/Play/QuickMatch.css
@@ -332,20 +332,20 @@
 
             &:hover, &:focus {
                 text-decoration: none;
-                background-color: var(--default-button); /* TODO: themed-lighten default-button button-highlight-brighten-amount */
-                border-color: var(--default-button); /* TODO: themed-darken default-button button-border-highlight-darken-amount */
+                background-color: color-mix(in srgb, var(--default-button), white 15%);
+                border-color: color-mix(in srgb, var(--default-button), black 20%);
             }
 
             &:active, &.active {
                 text-decoration: none;
-                background-color: var(--default-button); /* TODO: themed-darken default-button button-highlight-brighten-amount */
+                background-color: color-mix(in srgb, var(--default-button), black 10%);
                 border-color: var(--primary) !important;
             }
 
             &.disabled {
-                background-color: var(--default-button); /* TODO: themed-desaturate default-button button-disabled-desaturate-amount */
+                background-color: color-mix(in srgb, var(--default-button), var(--shade2) 70%);
                 color: var(--shade2);
-                border-color: var(--default-button); /* TODO: themed-desaturate default-button button-disabled-desaturate-amount */
+                border-color: color-mix(in srgb, var(--default-button), var(--shade2) 70%);
                 box-shadow: none;
                 cursor: default;
                 cursor: not-allowed;
